--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
+    "react-scroll": "^1.9.0",
+    "react-scroll-to-top": "^3.0.0",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.1"
   },
