--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-parallax-tilt": "^1.7.177",
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
