--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
@@ -25,6 +26,7 @@
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
+    "react-snowfall": "^1.2.1",
     "react-type-animation": "^3.2.0",
     "styled-components": "^6.1.1"
   },
