--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-image": "^4.1.0",
+    "react-image-zoom": "^1.3.1",
     "react-parallax-tilt": "^1.7.177",
     "react-router-dom": "^6.20.1",
     "react-scroll": "^1.9.0",
