--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.7",
+    "@tsparticles/engine": "^3.0.2",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.2",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
